--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/">
         <img src="../../img/logo.png" width="30" height="30" class="align-top" alt="">
         Tours shop
     </a>
@@ -54,7 +54,8 @@
                     <label for="inputPassword2">Same password</label>
                     <input  type="password" class="form-control" id="inputPassword2" placeholder="Password" disabled="disabled">
                 </div>
-                <button type="submit" class="btn btn-success">Sign in</button>
+                <button id="submitBtn" type="submit" class="btn btn-success">Sign in</button>
+                <button id="returnBtn" type="button" class="btn btn-info">Return</button>
             </form>
         </div>
         <div class="col-md-4">
