--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -10,14 +10,7 @@
     <title>Registration</title>
 </head>
 <body>
-<nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">
-        <img src="../../img/logo.png" width="30" height="30" class="align-top" alt="">
-        Tours shop
-    </a>
-</nav>
-
-
+<div th:replace="fragments :: nav_empty"></div>
 <div style="margin-right: 2vw; margin-left: 2vw;">
     <div class="row">
         <div class="col-md-4">
