--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -12,89 +12,13 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">
-        <img src="/img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        Tours shop
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <div>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle-split" href="#" id="navbarDropdownMenuLink0"
-                       data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false" th:text="${user.getLogin()}">
-                        User
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink0">
-                        <a class="dropdown-item" href="/settings">Settings</a>
-                        <a class="dropdown-item" href="/user-tours">My tours</a>
-                        <a class="dropdown-item" href="/logout">Logout</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Ural
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Kavkaz
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink3" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Kamchatka
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink3">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink4" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Crimea
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink4">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="../views/tour.html">All&nbsp;tours<span class="sr-only"></span></a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<div th:replace="fragments :: nav_full"></div>
 
 <div class="container">
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6" style="margin-top: 10vh">
-            <form action="" method="" th:object="${user}">
+            <form action="" method="" th:object="${userCur}">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputLogin">Login</label>
