--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -21,6 +21,7 @@
                     <div class="form-group col-md-6">
                         <label for="inputLogin">Your login</label>
                         <input name="login" type="text" class="form-control" id="inputLogin" placeholder="Login">
+                        <div style="color: red" th:text="${error_login_exists}"></div>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputEmail">Your email</label>
@@ -29,7 +30,8 @@
                 </div>
                 <div class="form-group">
                     <label for="inputFirstName">First name</label>
-                    <input name="firstName" type="text" class="form-control" id="inputFirstName" placeholder="First name">
+                    <input name="firstName" type="text" class="form-control" id="inputFirstName"
+                           placeholder="First name">
                 </div>
                 <div class="form-group">
                     <label for="inputLastName">Last name</label>
@@ -37,15 +39,17 @@
                 </div>
                 <div class="form-group">
                     <label for="inputPhone">Your phone</label>
-                        <input name="phone" type="tel" class="form-control" id="inputPhone" placeholder="+7 XXX XXX XX XX">
+                    <input name="phone" type="tel" class="form-control" id="inputPhone" placeholder="+7 XXX XXX XX XX">
                 </div>
                 <div class="form-group">
                     <label for="inputPassword1">New password</label>
-                    <input name="password" type="password" class="form-control" id="inputPassword1" placeholder="Password">
+                    <input name="password" type="password" class="form-control" id="inputPassword1"
+                           placeholder="Password">
                 </div>
                 <div class="form-group">
                     <label for="inputPassword2">Same password</label>
-                    <input  type="password" class="form-control" id="inputPassword2" placeholder="Password" disabled="disabled">
+                    <input type="password" class="form-control" id="inputPassword2" placeholder="Password"
+                           disabled="disabled">
                 </div>
                 <button id="submitBtn" type="submit" class="btn btn-success">Sign in</button>
                 <button id="returnBtn" type="button" class="btn btn-info">Return</button>
@@ -57,7 +61,7 @@
 </div>
 
 
-<script src="../../js/jquery.js"></script>
-<script src="../../js/scriptReg.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/scriptReg.js"></script>
 </body>
 </html> 
